--- a/src/index.scss
+++ b/src/index.scss
@@ -19,12 +19,38 @@
   transform: scale(1.05);
 }
 .hero-wrapper {
-  background-size: cover; /* Ensures full image is always visible */
+  background-size: cover; /* Covers the section */
   background-position: center; /* Centers the image */
   background-repeat: no-repeat; /* Prevents repetition */
-  width: 100%; /* Full width */
-  min-height: 100vh; /* Ensures it covers at least the full viewport height */
+  width: 100%;
+  min-height: 100vh !important; /* Default height for larger screens */
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 50px 20px; /* Adds padding for better spacing */
+}
+
+/* Responsive adjustments for smaller screens */
+@media (max-width: 768px) {
+  .hero-wrapper {
+    min-height: 30vh !important; /* Reduce height on tablets */
+    background-size: cover !important; /* Show full image without cropping */
+    padding: 0px !important;
+  }
+  .hero-style2 {
+    padding: 5rem 1.25rem !important;
+  }
+  .counter-container {
+    padding: 0.625rem !important;
+  }
+  .work-process-container {
+    padding: 1.25rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero-wrapper {
+    min-height: 20vh !important; /* Smaller height for mobile screens */
+    // padding: 30px 15px !important; /* Adjust padding */
+  }
 }
